Adding data from mozzart to db